--- a/pre-build/html/custom/custom-toolTip.html
+++ b/pre-build/html/custom/custom-toolTip.html
@@ -325,10 +325,13 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-&lt;div class="toolTipBox"&gt;
-    &lt;div class="exTooltip"&gt;
-        &lt;span&gt;툴팁 예제&lt;/span&gt;
-    &lt;/div&gt;
+&lt;div id="wrap"&gt;                                
+  &lt;div class="toolTipBox"&gt;
+    &lt;p&gt;마우스를 올려보세요!&lt;/p&gt;
+      &lt;div class="exTooltip"&gt;
+          &lt;span&gt;툴팁 예제&lt;/span&gt;
+      &lt;/div&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
                               </code>
                             </pre>
