--- a/pre-build/html/etc/etc-fadeinout.html
+++ b/pre-build/html/etc/etc-fadeinout.html
@@ -322,35 +322,27 @@
                 <div class="highlightArea cScroll">
                   <pre>
                         <code class="language-html">
-&lt;div class="resultCont"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;CSS fade in/out&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;div class="contArea"&gt;
-        &lt;div class="tgArea fadeType01"&gt;
-            &lt;button type="button" class="btnFadeInout"&gt;
-                &lt;span&gt;클릭!&lt;/span&gt;
-            &lt;/button&gt;
-            &lt;div class="tgCont"&gt;
-                &lt;span&gt;숨겨진 내용이 페이드 인아웃됩니다.&lt;/span&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-&lt;div class="resultCont"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;JS fade in/out&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;div class="contArea"&gt;
-        &lt;div class="tgArea fadeType02"&gt;
-            &lt;button type="button" class="btnFadeInout"&gt;
-                &lt;span&gt;클릭!&lt;/span&gt;
-            &lt;/button&gt;
-            &lt;div class="tgCont"&gt;
-                &lt;span&gt;숨겨진 내용이 페이드 인아웃됩니다.&lt;/span&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
+&lt;div id="wrap"&gt;
+  &lt;div class="contArea"&gt;
+      &lt;div class="tgArea fadeType01"&gt;
+          &lt;button type="button" class="btnFadeInout"&gt;
+              &lt;span&gt;클릭!&lt;/span&gt;
+          &lt;/button&gt;
+          &lt;div class="tgCont"&gt;
+              &lt;span&gt;숨겨진 내용이 페이드 인아웃됩니다.&lt;/span&gt;
+          &lt;/div&gt;
+      &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div class="contArea"&gt;
+      &lt;div class="tgArea fadeType02"&gt;
+          &lt;button type="button" class="btnFadeInout"&gt;
+              &lt;span&gt;클릭!&lt;/span&gt;
+          &lt;/button&gt;
+          &lt;div class="tgCont"&gt;
+              &lt;span&gt;숨겨진 내용이 페이드 인아웃됩니다.&lt;/span&gt;
+          &lt;/div&gt;
+      &lt;/div&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
                         </code>
                     </pre>
