--- a/pre-build/html/footer/footer-footer-basic.html
+++ b/pre-build/html/footer/footer-footer-basic.html
@@ -529,7 +529,7 @@ background-color: #444;
               </div>
             </div>
             <div class="btnArea sb">
-              <a href="/images/common/main-logo-w.png" download="footer-basic-img" title="파일 다운로드" class="button Bgblue btnDataDownload">
+              <a href="../../images/common/main-logo-w.png" download="footer-basic-img" title="파일 다운로드" class="button Bgblue btnDataDownload">
                 <span>다운로드</span>
                 <svg width="24px" height="24px" version="1.1" viewBox="0 0 700 700">
                   <g>
