--- a/pre-build/html/input/input-inputStyle.html
+++ b/pre-build/html/input/input-inputStyle.html
@@ -327,132 +327,86 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : text&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input01"&gt;라벨&lt;/label&gt;
-    &lt;input type="text" id="input01"&gt;
-&lt;/div&gt;
+&lt;div id="wrap"&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input01"&gt;라벨&lt;/label&gt;
+      &lt;input type="text" id="input01"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : date&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input02"&gt;라벨&lt;/label&gt;
-    &lt;input type="date" id="input02"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input02"&gt;라벨&lt;/label&gt;
+      &lt;input type="date" id="input02"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : url&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input03"&gt;라벨&lt;/label&gt;
-    &lt;input type="url" id="input03"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input03"&gt;라벨&lt;/label&gt;
+      &lt;input type="url" id="input03"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : time&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input04"&gt;라벨&lt;/label&gt;
-    &lt;input type="time" id="input04"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input04"&gt;라벨&lt;/label&gt;
+      &lt;input type="time" id="input04"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : week&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input05"&gt;라벨&lt;/label&gt;
-    &lt;input type="week" id="input05"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input05"&gt;라벨&lt;/label&gt;
+      &lt;input type="week" id="input05"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : tel&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input06"&gt;라벨&lt;/label&gt;
-    &lt;input type="tel" id="input06"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input06"&gt;라벨&lt;/label&gt;
+      &lt;input type="tel" id="input06"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : email&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input07"&gt;라벨&lt;/label&gt;
-    &lt;input type="email" id="input07"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input07"&gt;라벨&lt;/label&gt;
+      &lt;input type="email" id="input07"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : password&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input08"&gt;라벨&lt;/label&gt;
-    &lt;input type="password" id="input08"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input08"&gt;라벨&lt;/label&gt;
+      &lt;input type="password" id="input08"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : datetime-local&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input09"&gt;라벨&lt;/label&gt;
-    &lt;input type="datetime-local" id="input09"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input09"&gt;라벨&lt;/label&gt;
+      &lt;input type="datetime-local" id="input09"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : month&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input10"&gt;라벨&lt;/label&gt;
-    &lt;input type="month" id="input10"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input10"&gt;라벨&lt;/label&gt;
+      &lt;input type="month" id="input10"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : number&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input11"&gt;라벨&lt;/label&gt;
-    &lt;input type="number" id="input11"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input11"&gt;라벨&lt;/label&gt;
+      &lt;input type="number" id="input11"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : search&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input12"&gt;라벨&lt;/label&gt;
-    &lt;input type="search" id="input12"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input12"&gt;라벨&lt;/label&gt;
+      &lt;input type="search" id="input12"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : hidden&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input13"&gt;라벨&lt;/label&gt;
-    &lt;input type="hidden" id="input13"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input13"&gt;라벨&lt;/label&gt;
+      &lt;input type="hidden" id="input13"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : image&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input14"&gt;라벨&lt;/label&gt;
-    &lt;input type="image" id="input14"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input14"&gt;라벨&lt;/label&gt;
+      &lt;input type="image" id="input14"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : color&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input15"&gt;라벨&lt;/label&gt;
-    &lt;input type="color" id="input15"&gt;
-&lt;/div&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input15"&gt;라벨&lt;/label&gt;
+      &lt;input type="color" id="input15"&gt;
+  &lt;/div&gt;
 
-&lt;div class="textBox"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;type : button&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;label for="input16"&gt;라벨&lt;/label&gt;
-    &lt;input type="button" value="value" id="input16"&gt;
+  &lt;div class="textBox"&gt;
+      &lt;label for="input16"&gt;라벨&lt;/label&gt;
+      &lt;input type="button" value="value" id="input16"&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
                               </code>
                             </pre>
@@ -464,9 +418,8 @@
                   <pre>
                               <code class="language-scss">
 input{display:inline-block; height: 30px; border: 1px solid #ddd; padding-left: 5px; box-sizing: border-box; 
-font-family: 'Noto Sans'; vertical-align:sub; border-radius: 4px; background-color: #fff;
-    &.full{width: 100%;}
-}
+font-family: 'Noto Sans'; vertical-align:sub; border-radius: 4px; background-color: #fff;}
+.textBox+.textBox{margin-top: 50px;}
                               </code>
                             </pre>
                 </div>
@@ -488,8 +441,8 @@ input {
   background-color: #fff;
 }
 
-input.full {
-  width: 100%;
+.textBox + .textBox{
+  margin-top: 50px;
 }
                               </code>
                           </pre>
