--- a/pre-build/html/input/input-selectStyle.html
+++ b/pre-build/html/input/input-selectStyle.html
@@ -323,55 +323,57 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-&lt;label for="select01"&gt;라벨&lt;/label&gt;
-&lt;select id="select01" class="select"&gt;
-    &lt;option&gt;선택&lt;/option&gt;
-&lt;/select&gt;
+&lt;div id="wrap"&gt;                                
+  &lt;label for="select01"&gt;라벨&lt;/label&gt;
+  &lt;select id="select01" class="select"&gt;
+      &lt;option&gt;선택&lt;/option&gt;
+  &lt;/select&gt;
 
-&lt;div class="selContainer"&gt;
-    &lt;label&gt;라벨&lt;/label&gt;
-    &lt;div class="customSelect"&gt;
-        &lt;ul&gt;
-            &lt;li&gt;
-                &lt;span&gt;선택&lt;/span&gt;
-                &lt;ul class="selList"&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트1&lt;/span&gt;
-                    &lt;/li&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트2&lt;/span&gt;
-                    &lt;/li&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트3&lt;/span&gt;
-                    &lt;/li&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트4&lt;/span&gt;
-                    &lt;/li&gt;
-                &lt;/ul&gt;
-            &lt;/li&gt;
-        &lt;/ul&gt;
-    &lt;/div&gt;
-    &lt;div class="customSelect"&gt;
-        &lt;ul&gt;
-            &lt;li&gt;
-                &lt;span&gt;선택&lt;/span&gt;
-                &lt;ul class="selList"&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트1&lt;/span&gt;
-                    &lt;/li&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트2&lt;/span&gt;
-                    &lt;/li&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트3&lt;/span&gt;
-                    &lt;/li&gt;
-                    &lt;li&gt;
-                        &lt;span&gt;리스트4&lt;/span&gt;
-                    &lt;/li&gt;
-                &lt;/ul&gt;
-            &lt;/li&gt;
-        &lt;/ul&gt;
-    &lt;/div&gt;
+  &lt;div class="selContainer"&gt;
+      &lt;label&gt;라벨&lt;/label&gt;
+      &lt;div class="customSelect"&gt;
+          &lt;ul&gt;
+              &lt;li&gt;
+                  &lt;span&gt;선택&lt;/span&gt;
+                  &lt;ul class="selList"&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트1&lt;/span&gt;
+                      &lt;/li&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트2&lt;/span&gt;
+                      &lt;/li&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트3&lt;/span&gt;
+                      &lt;/li&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트4&lt;/span&gt;
+                      &lt;/li&gt;
+                  &lt;/ul&gt;
+              &lt;/li&gt;
+          &lt;/ul&gt;
+      &lt;/div&gt;
+      &lt;div class="customSelect"&gt;
+          &lt;ul&gt;
+              &lt;li&gt;
+                  &lt;span&gt;선택&lt;/span&gt;
+                  &lt;ul class="selList"&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트1&lt;/span&gt;
+                      &lt;/li&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트2&lt;/span&gt;
+                      &lt;/li&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트3&lt;/span&gt;
+                      &lt;/li&gt;
+                      &lt;li&gt;
+                          &lt;span&gt;리스트4&lt;/span&gt;
+                      &lt;/li&gt;
+                  &lt;/ul&gt;
+              &lt;/li&gt;
+          &lt;/ul&gt;
+      &lt;/div&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
                               </code>
                             </pre>
@@ -384,7 +386,9 @@
                               <code class="language-scss">
 .select{display: inline-block; height: 30px; border: 1px solid #ddd; padding: 0 5px; box-sizing: border-box;
 font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middle;background-color: #fff;}
-                            
+         
+label{color: #000; font-family: "Noto Sans";}
+
 .selContainer{display: flex;
   label{display: flex;align-items: center; margin-right: 7px;}
 }
@@ -393,7 +397,7 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
   >ul{flex: 1;
     >li{flex: 1; position: relative; border: 1px solid #ddd;
     width: 210px; height: 30px; text-indent: 5px; box-sizing: border-box; background: url("../images/ico/ico-select-down.svg")no-repeat center right 10px;
-      span{display: block; line-height: 28px; color: #222; font-family: 'Noto Sans'; cursor: pointer;}
+      span{flex: 0.975; display: block; line-height: 28px; color: #222; font-family: 'Noto Sans'; cursor: pointer;}
       .selList{display: none; position: absolute; top: 29px; left: -1px; width: 100%; z-index: 200; 
       border: 1px solid #ddd; border-top: 0; border-radius: 0 0 4px 4px; background-color: #fff;
         li{
@@ -418,6 +422,26 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-css">
+label {
+  color: #000;
+  font-family: "Noto Sans";
+}                           
+.selContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.selContainer label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 7px;
+}
+
 .customSelect {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -437,16 +461,22 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  display: -webkit-box;
+      display: -ms-flexbox;
+              display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 30px;
   position: relative;
   border: 1px solid #ddd;
   text-indent: 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background: url("../images/ico/ico-select-down.svg") no-repeat center right 10px;
 }
 
 .customSelect > ul > li span {
+  flex: 0.975;
   display: block;
   line-height: 28px;
   color: #222;
@@ -491,6 +521,7 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-javascript">
+$(function(){
   $('.customSelect').on({
     "click":function(){
       $(this).toggleClass('active').siblings('.customSelect').removeClass('active');
@@ -509,6 +540,8 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
       $(this).parents('ul').prev('span').text($(this).text());
     }
   });
+});
+  
                               </code>
                             </pre>
                 </div>
@@ -592,7 +625,7 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
               </div>
             </div>
             <div class="btnArea">
-              <a href="/images/ico/ico-select-down.svg" download="input-seletStyle-img" title="파일 다운로드" class="button Bgblue btnDataDownload">
+              <a href="../../images/ico/ico-select-down.svg" download="input-seletStyle-img" title="파일 다운로드" class="button Bgblue btnDataDownload">
                 <span>다운로드</span>
                 <svg width="24px" height="24px" version="1.1" viewBox="0 0 700 700">
                   <g>
