--- a/pre-build/html/footer/footer-footer-fixed.html
+++ b/pre-build/html/footer/footer-footer-fixed.html
@@ -498,7 +498,7 @@
               </div>
             </div>
             <div class="btnArea sb">
-              <a href="/images/common/main-logo-w.png" download="footer-fixed-img" title="파일 다운로드" class="button Bgblue btnDataDownload">
+              <a href="../../images/common/main-logo-w.png" download="footer-fixed-img" title="파일 다운로드" class="button Bgblue btnDataDownload">
                 <span>다운로드</span>
                 <svg width="24px" height="24px" version="1.1" viewBox="0 0 700 700">
                   <g>
