github pages 세팅

--- a/pre-build/index.html
+++ b/pre-build/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../images/ico/ico-favi.png" sizes="16x16">
-    <link rel="stylesheet" href="../css/common/component.css" type="text/css">
-    <script type="text/javascript" src="../lib/jquery-1.12.4.js"></script>
-    <script src="../js/main.js"></script>
+    <link rel="icon" href="images/ico/ico-favi.png" sizes="16x16">
+    <link rel="stylesheet" href="css/common/component.css" type="text/css">
+    <script type="text/javascript" src="lib/jquery-1.12.4.js"></script>
+    <script src="js/main.js"></script>
     <title>Component css</title>
 </head>
 
