--- a/pre-build/html/sub_first.html
+++ b/pre-build/html/sub_first.html
@@ -598,6 +598,9 @@ $(function () {
   </div>
   <script>
     fouc(document.documentElement);
+    window.onbeforeunload = function() {
+	return "?";
+}
   </script>
 </body>
 </html>
