--- a/pre-build/html/gnb/gnb-hover-full-dropdown.html
+++ b/pre-build/html/gnb/gnb-hover-full-dropdown.html
@@ -11,7 +11,7 @@
       <div class="leftArea cScroll">
         <ul class="leftMenu">
           <li>
-            <a href="../../html/main.html" title="메인으로">
+            <a href="index.html" title="메인으로">
               <img src="../../images/common/logo.png" class="lightLogo" alt="서브 메인로고">
               <img src="../../images/common/main-logo-w.png" class="darkLogo" alt="서브 메인로고" />
               <span class="hidden">메인으로</span>
@@ -43,7 +43,7 @@
               </li>
             </ul>
           </li>
-          <li class="active">
+          <li id="currentDep1">
             <span>
               <a href="#none" title="GNB">GNB
                 <svg viewBox="0 0 700 700">
@@ -52,8 +52,8 @@
                 </svg>
               </a>
             </span>
-            <ul class="leftSubMenu block">
-              <li class="active">
+            <ul class="leftSubMenu">
+              <li id="currentDep2">
                 <a href="../gnb/gnb-hover-full-dropdown.html" title="GNB Hover Full Dropdown">GNB Hover Full
                   Dropdown</a>
               </li>
@@ -698,6 +698,9 @@ $(function(){
       </button>
     </div>
   </div>
+  <script>
+    $('#currentDep1,#currentDep2').addClass('active');
+  </script>
 </body>
 
 </html>
