--- a/pre-build/html/etc/etc-rotate.html
+++ b/pre-build/html/etc/etc-rotate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" class="skel">
+<html lang="ko" class="no-display skel">
 
 <head>
   @@include('include/head.html')
@@ -11,7 +11,7 @@
       <div class="leftArea cScroll">
         <ul class="leftMenu">
           <li>
-            <a href="index.html" title="메인으로">
+            <a href="../index.html" title="메인으로">
               <img src="../../images/common/logo.png" class="lightLogo" alt="서브 메인로고">
               <img src="../../images/common/main-logo-w.png" class="darkLogo" alt="서브 메인로고" />
               <span class="hidden">메인으로</span>
@@ -24,7 +24,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="Header">Header
+              <a href="javascript:void(0)" title="Header">Header
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -45,7 +45,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="GNB">GNB
+              <a href="javascript:void(0)" title="GNB">GNB
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -69,7 +69,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="Footer">Footer
+              <a href="javascript:void(0)" title="Footer">Footer
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -87,7 +87,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="Layout">Layout
+              <a href="javascript:void(0)" title="Layout">Layout
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -166,7 +166,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="Input">Input
+              <a href="javascript:void(0)" title="Input">Input
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -193,7 +193,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="Scroll element">Scroll element
+              <a href="javascript:void(0)" title="Scroll element">Scroll element
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -211,7 +211,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="Custom">Custom
+              <a href="javascript:void(0)" title="Custom">Custom
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -232,7 +232,7 @@
           </li>
           <li>
             <span>
-              <a href="#none" title="Popup">Popup
+              <a href="javascript:void(0)" title="Popup">Popup
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -253,7 +253,7 @@
           </li>
           <li class="active">
             <span>
-              <a href="#none" title="Etc">Etc
+              <a href="javascript:void(0)" title="Etc">Etc
                 <svg viewBox="0 0 700 700">
                   <path
                     d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -469,6 +469,9 @@ border: 1px solid $blackBg; background-color: $dddBg;
       </button>
     </div>
   </div>
+  <script>
+    fouc(document.documentElement);
+  </script>
 </body>
 
 </html>
