메인페이지 헤더 수정 및 업데이트노트 작성

--- a/pre-build/html/custom/custom-toolTip.html
+++ b/pre-build/html/custom/custom-toolTip.html
@@ -310,7 +310,7 @@
               <h1>Tool tip</h1>
             </div>
             <div class="mainTxt">
-              <p>아래 검은색 박스에 마우스를 갖다대면 툴팁이 표시됩니다.</p>
+              <p class="web">아래 검은색 박스에 마우스를 갖다대면 툴팁이 표시됩니다.</p>
             </div>
             <div class="tabWrap type01">
               <div class="tabNav">
